--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto curso Backend",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "Ariela Makarz",
   "license": "ISC",
