--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Ariela Makarz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7",
+    "socket.io": "^4.6.0"
   }
 }
