--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Proyecto curso Backend",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "start": "node .",
     "dev": "nodemon ."
@@ -11,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.1",
     "handlebars": "^4.7.7",
+    "mongoose": "^6.10.2",
     "socket.io": "^4.6.0"
   }
 }
