--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^7.0.1",
     "handlebars": "^4.7.7",
     "mongoose": "^6.10.2",
+    "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.6.0"
   }
 }
