--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ariela Makarz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
@@ -18,6 +19,9 @@
     "handlebars": "^4.7.7",
     "mongoose": "^6.10.2",
     "mongoose-paginate-v2": "^1.7.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.6.0"
   }
 }
