--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.2",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "twilio": "^4.10.0"
   }
 }
