--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.0",
-    "twilio": "^4.10.0"
+    "twilio": "^4.10.0",
+    "winston": "^3.8.2"
   }
 }
