--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
+    "mocha": "^10.2.0",
     "mongoose": "^6.10.2",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemailer": "^6.9.1",
@@ -31,6 +33,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "stripe": "^12.10.0",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "twilio": "^4.10.0",
